Python para Zumbis/1 - Comecando com o basico/5.1 - TWP040 Marcadores
Python 2.7.10 (default, Oct 14 2015, 16:09:02) 
[GCC 5.2.1 20151010] on linux2
Type "copyright", "credits" or "license()" for more information.
>>> a = 42
>>> b = 13
>>> a
42
>>> print ('O número é 42')
O número é 42
>>> a
42
>>> print ('O numero e', a)
('O numero e', 42)
>>> print ('O numero', a, 'e muito legal')
('O numero', 42, 'e muito legal')
>>> 
>>> a = 'abacate'
>>> print ('Uma fruta muito gostosa é o %s' %a)
Uma fruta muito gostosa é o abacate
>>> a = 3.1415
>>> print ('Pi è %f' %a)
Pi è 3.141500
>>>  print ('Pi com duas casas %.2f' %a)
 
  File "<pyshell#12>", line 1
    print ('Pi com duas casas %.2f' %a)
    ^
IndentationError: unexpected indent
>>> print ('Pi com duas casas %.2f' %a)
Pi com duas casas 3.14
>>> 
